--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>banditory</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Разнообразный и богатый опыт консультация с широким активом требует определения и уточнения модели развития. Идейные соображения высшего порядка, а также понимание сущности ресурсосберегающих технологий создаёт предпосылки качественно новых шагов для укрепления демократической системы. Разнообразный и богатый опыт консультация с широким активом играет важную роль в формировании новых предложений.</h1>
         <p>Прежде всего повышение уровня гражданского сознания проверки влечёт за собой интересный процесс внедрения модернизации систему массового участия. Прежде всего понимание сущности ресурсосберегающих технологий требует анализа поставленных обществом и правительством задач. Равным образом начало повседневной работы по формированию позиции играет важную роль в формировании поставленных обществом и правительством задач.</p>
-        <img src="Aerial_View_of_the_Johnson_Space_Center.jpg" alt="">
+        <img class="img" src="img/Aerial_View_of_the_Johnson_Space_Center.jpg" alt="">
+        <button class="btn">НАЖМИ ПЭЖЭ</button>
+        <input class="name" type="text">
+        <p>третье фиг знает</p>
 </div>
 </body>
 
