--- a/19-01-2021/index.html
+++ b/19-01-2021/index.html
@@ -11,10 +11,46 @@
 <body>
     <div class="container">
         <p>Прежде всего повышение уровня гражданского сознания проверки влечёт за собой интересный процесс внедрения модернизации систему массового участия. Прежде всего понимание сущности ресурсосберегающих технологий требует анализа поставленных обществом и правительством задач. Равным образом начало повседневной работы по формированию позиции играет важную роль в формировании поставленных обществом и правительством задач.</p>
-        <img class="img" src="img/Aerial_View_of_the_Johnson_Space_Center.jpg" alt="">
+        <img class="img" src="img/Aerial_View_of_the_Johnson_Space_Cent2er.jpg" alt="ну там город кароче и еще дорога ага">
         <button class="btn">НАЖМИ ПЭЖЭ</button>
         <input class="name" type="text">
-        <p>третье фиг знает</p>
+        <p>alt это то что появляется до того как появилось само изображение и то что читается экранным диктором, ну крч чисто название картинки. как я понимаю</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <script>
+
+
+
+        </script>
 </div>
 </body>
 
